# rust-crud

./: Cargo.toml  README.md
src/: main.rs  mongo.rs  schema.rs  server.rs
src/models/: mod.rs  persons.rs
