[package]
name = "rust-test"
version = "0.1.0"
authors = ["Rafael Briceño <rafaelbm9126@gmail.com>"]
edition = "2018"
 
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
[dependencies]
iron = "0.6.0"
mount = "0.4.0"
logger = "0.4.0"
serde = "1.0.91"
serde_derive = "1.0.91"
juniper = "0.11.1"
juniper_iron = "0.3.0"
juniper_codegen = "0.11.1"
mongodb = "0.3.11"
bson = "0.13"
